# utac-core

./: .gitignore  CHANGELOG.md  README.md  domains.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  cli.md  index.md
src/utac_core/: __init__.py  cli.py  core.py  entropy_table_bridge.py
tests/: test_cli.py  test_core.py
