[project]
name = "utac-core"
version = "0.3.1"
description = "The mathematical UTAC logistic core – σ(β(R−Θ)), β-Fitting, Frame-Principle and v_RIG for the GenesisAeon stack."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "GenesisAeon Team", email = "team@genesisaeon.org" }]
requires-python = ">=3.11"
keywords = ["utac", "logistic", "field-theory", "frame-principle", "mathematics", "physics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "sympy>=1.13.0",
    "numpy>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.15.0",
]

[project.optional-dependencies]
stack = [
    "field-theory>=0.1.0",
    "sigillin>=0.1.0",
    "cosmic-moment>=0.1.0",
    "medium-modulation>=0.1.0",
    "entropy-governance>=0.1.0",
    "entropy-table>=1.0.1",
    "implosive-genesis>=0.4.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "pre-commit>=3.7.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocstrings[python]>=0.27",
    "mkdocs-material>=9.6",
]

[project.scripts]
utac = "utac_core.cli:app"

[project.urls]
Repository = "https://github.com/GenesisAeon/utac-core"
Issues = "https://github.com/GenesisAeon/utac-core/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/utac_core"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W", "UP", "C4", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=utac_core --cov-report=term-missing -v"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

